--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Flask==2.0.3
 keras==2.6.0
 numpy==1.19.5
+opencv-python-headless
 opencv_contrib_python==4.6.0.66
 Pillow==8.4.0
 scikit_image==0.17.2
 Werkzeug==2.0.3
 gunicorn==20.1.0
 tensorflow-cpu==2.6.2
-opencv-python
